[package]
edition = "2024"
name = "call"
publish = false
version = "0.1.0"

[features]
default = ["inbound", "outbound", "ports"]
inbound = [
  "dep:axum",
  "dep:model-error-response",
  "dep:model_user",
  "dep:utoipa",
  "entity_access/inbound",
  "ports",
]
outbound = [
  "dep:livekit-api",
  "dep:livekit-protocol",
  "dep:models_permissions",
  "dep:sqlx",
  "ports",
]
ports = ["dep:entity_access", "dep:tokio"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true }
connection = { path = "../connection", default-features = false, features = [
  "ports",
] }
entity_access = { path = "../entity_access", optional = true, default-features = false, features = [
  "ports",
] }
livekit-api = { workspace = true, optional = true }
livekit-protocol = { workspace = true, optional = true }
macro_user_id = { path = "../macro_user_id" }
model-entity = { path = "../model-entity" }
model-error-response = { path = "../model-error-response", optional = true }
model_user = { path = "../model_user", optional = true, features = ["axum"] }
models_permissions = { path = "../models_permissions", optional = true }
notification = { path = "../notification" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"], optional = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
macro_db_migrator = { path = "../macro_db_migrator" }
mockall = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
