[package]
edition = "2024"
name = "call"
publish = false
version = "0.1.0"

[features]
ai_tools = ["dep:ai_toolset", "dep:async-trait", "dep:schemars", "ports"]
default = ["ai_tools", "inbound", "outbound", "ports"]
inbound = [
  "dep:axum",
  "dep:model-error-response",
  "dep:model_user",
  "dep:utoipa",
  "entity_access/inbound",
  "item_filters/schema",
  "ports",
]
outbound = [
  "dep:agent",
  "dep:ai_usage",
  "dep:aws-sdk-s3",
  "comms/outbound",
  "dep:entity_access_db_utils",
  "dep:futures",
  "dep:livekit-api",
  "dep:livekit-protocol",
  "dep:macro_aws_config",
  "dep:pgvector",
  "dep:sqlx",
  "ports",
]
ports = ["dep:entity_access", "dep:tokio"]

[dependencies]
agent = { path = "../agent", optional = true }
ai_usage = { path = "../ai_usage", optional = true }
ai_toolset = { path = "../ai_toolset", optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true }
comms = { path = "../comms", default-features = false }
connection = { path = "../connection", default-features = false, features = [
  "ports",
] }
entity_access = { path = "../entity_access", optional = true, default-features = false, features = [
  "ports",
] }
entity_access_db_utils = { path = "../entity_access_db_utils", optional = true }
filter_ast = { path = "../filter_ast" }
futures = { workspace = true, optional = true }
item_filters = { path = "../item_filters" }
livekit-api = { workspace = true, optional = true }
livekit-protocol = { workspace = true, optional = true }
macro_aws_config = { path = "../macro_aws_config", optional = true, features = [
  "s3",
] }
macro_user_id = { path = "../macro_user_id" }
macro_uuid = { path = "../macro_uuid" }
model-entity = { path = "../model-entity" }
model-error-response = { path = "../model-error-response", optional = true }
model_user = { path = "../model_user", optional = true, features = ["axum"] }
models_pagination = { path = "../models_pagination" }
models_permissions = { path = "../models_permissions" }
notification = { path = "../notification" }
pgvector = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"], optional = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
macro_db_migrator = { path = "../macro_db_migrator" }
mockall = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
