[package]
edition = "2024"
name = "channel_bots"
publish = false
version = "0.1.0"

[dependencies]
agent = { path = "../agent" }
ai_tools = { path = "../ai_tools" }
ai_toolset = { path = "../ai_toolset" }
anyhow = { workspace = true }
async-trait = { workspace = true }
bot_id = { path = "../bot_id" }
channels = { path = "../channels", features = ["inbound", "outbound"] }
futures = { workspace = true }
macro_user_id = { path = "../macro_user_id" }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
models_pagination = { path = "../models_pagination" }
