[package]
name = "chat"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["ports", "inbound", "outbound"]
ports = []
inbound = ["ports", "dep:axum", "dep:model_user", "entity_access/inbound"]
outbound = ["ports", "dep:sqlx", "dep:macro_share_permissions", "dep:macro_uuid"]

[dependencies]
# Domain (always included)
ai = { path = "../ai" }
anyhow = { workspace = true }
entity_access = { path = "../entity_access", default-features = false }
chrono = { workspace = true }
macro_user_id = { path = "../macro_user_id" }
model = { path = "../model" }
models_permissions = { path = "../models_permissions" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Inbound (HTTP handlers)
axum = { workspace = true, optional = true }
model_user = { path = "../model_user", optional = true }
utoipa = { workspace = true }

# Outbound (database adapters)
macro_share_permissions = { path = "../macro_share_permissions", optional = true }
sqlx = { workspace = true, optional = true }

macro_uuid = { path = "../macro_uuid", optional = true }

[dev-dependencies]
http-body-util = { workspace = true }
macro_db_migrator = { path = "../macro_db_migrator" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
