[package]
edition = "2024"
name = "chat"
publish = false
version = "0.1.0"

[features]
default = ["inbound", "outbound", "ports"]
inbound = ["dep:axum", "dep:model_user", "dep:roles_and_permissions", "entity_access/inbound", "ports"]
outbound = [
  "dep:macro_share_permissions",
  "dep:macro_uuid",
  "dep:sqlx",
  "ports",
]
ports = []

[dependencies]
# Domain (always included)
ai = { path = "../ai" }
ai_toolset = { path = "../ai_toolset" }
anyhow = { workspace = true }
chrono = { workspace = true }
entity_access = { path = "../entity_access", default-features = false }
macro_user_id = { path = "../macro_user_id" }
model = { path = "../model" }
models_permissions = { path = "../models_permissions" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }

# Inbound (HTTP handlers)
axum = { workspace = true, optional = true }
model_user = { path = "../model_user", optional = true }
roles_and_permissions = { path = "../roles_and_permissions", optional = true, default-features = false }
utoipa = { workspace = true }

# Outbound (database adapters)
macro_share_permissions = { path = "../macro_share_permissions", optional = true }
sqlx = { workspace = true, optional = true }

macro_uuid = { path = "../macro_uuid", optional = true }

[dev-dependencies]
http-body-util = { workspace = true }
macro_db_migrator = { path = "../macro_db_migrator" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
