[package]
edition = "2024"
name = "chat"
publish = false
version = "0.1.0"

[features]
default = ["ai_tools", "inbound", "outbound", "ports"]
ai_tools = ["dep:async-trait", "dep:schemars", "inbound", "ports"]
attachment = [
  "dep:futures",
  "inbound",
]
inbound = [
  "dep:axum",
  "dep:model_user",
  "dep:roles_and_permissions",
  "entity_access/inbound",
  "ports",
]
outbound = ["dep:entity_access_db_utils", "dep:macro_uuid", "dep:sqlx", "ports"]
ports = []

[dependencies]
# Domain (always included)
ai = { path = "../ai" }
ai_toolset = { path = "../ai_toolset" }
anyhow = { workspace = true }
attachment = { path = "../attachment" }
chrono = { workspace = true }
entity_access = { path = "../entity_access", default-features = false }
entity_access_db_utils = { path = "../entity_access_db_utils", optional = true }
entity_access_management = { path = "../entity_access_management", default-features = false, features = [
  "ports",
] }
macro_user_id = { path = "../macro_user_id" }
model = { path = "../model" }
non_empty = { path = "../non_empty" }
model-entity = { path = "../model-entity" }
models_entity_access_management = { path = "../models_entity_access_management", default-features = false }
models_permissions = { path = "../models_permissions" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }

# Attachment (attachment provider)
futures = { workspace = true, optional = true }

# AI tools (toolset adapter)
async-trait = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

# Inbound (HTTP handlers)
axum = { workspace = true, optional = true }
model_user = { path = "../model_user", optional = true }
roles_and_permissions = { path = "../roles_and_permissions", optional = true, default-features = false }
utoipa = { workspace = true }

# Outbound (database adapters)
sqlx = { workspace = true, optional = true }

macro_uuid = { path = "../macro_uuid", optional = true }

[dev-dependencies]
http-body-util = { workspace = true }
macro_db_migrator = { path = "../macro_db_migrator" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
