[package]
edition = "2024"
name = "comms"
publish = false
version = "0.1.0"

[features]
inbound = ["dep:axum", "dep:model_user", "dep:reqwest", "dep:utoipa"]
outbound = ["dep:reqwest"]


[dependencies]
axum = { workspace = true, optional = true }
chrono = { workspace = true }
doppleganger = { workspace = true, features = ["chrono", "uuid"] }
frecency = { path = "../frecency", features = ["ports"] }
item_filters = { path = "../item_filters" }
macro_user_id = { path = "../macro_user_id" }
model-entity = { path = "../model-entity" }
model_user = { path = "../model_user", optional = true, features = ["axum"] }
models_comms = { path = "../models_comms" }
models_pagination = { path = "../models_pagination" }
reqwest = { workspace = true, optional = true }
rootcause = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }
