[package]
edition = "2024"
name = "comms_service"
publish = false
version = "0.1.0"

[lib]
name = "comms_service"
path = "src/lib.rs"

[[bin]]
name = "comms_service_openapi"
path = "src/openapi.rs"

[features]
channel_search = []
default = ["channel_search", "service"]
local_auth = []
service = ["comms_db_client"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-sqs = { workspace = true }
axum = { workspace = true, features = ["tower-log", "ws"] }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
comms = { path = "../comms", features = ["inbound", "outbound"] }
comms_db_client = { path = "../comms_db_client", optional = true }
connection_gateway_client = { path = "../connection_gateway_client" }
doppleganger = { workspace = true }
entity_access = { path = "../entity_access" }
entity_access_db_utils = { path = "../entity_access_db_utils" }
frecency = { path = "../frecency", features = ["postgres"] }
futures = { workspace = true }
http-body-util = { workspace = true }
jsonwebtoken.workspace = true
last_online_tracker = { path = "../last_online_tracker" }
macro_auth = { path = "../macro_auth" }
macro_db_client = { path = "../macro_db_client" }
macro_env = { path = "../macro_env" }
macro_env_var = { path = "../macro_env_var" }
macro_middleware = { path = "../macro_middleware", default-features = false, features = [
  "auth",
  "cloud_storage",
] }
macro_user_id = { path = "../macro_user_id" }
macro_uuid = { path = "../macro_uuid" }
model = { path = "../model" }
model-entity = { path = "../model-entity" }
model_notifications = { path = "../model_notifications" }
models_comms = { path = "../models_comms" }
models_opensearch = { path = "../models_opensearch" }
models_permissions = { path = "../models_permissions" }
notification_hex = { path = "../notification", package = "notification" }
reqwest.workspace = true
secretsmanager_client = { path = "../secretsmanager_client" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqs_client = { path = "../sqs_client", default-features = false, features = [
  "search",
] }
contacts = { path = "../contacts" }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true }

[dev-dependencies]
rootcause = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[package.metadata.cargo-machete]
ignored = ["connection_gateway"]
