[package]
edition = "2024"
name = "connection_gateway"
publish = false
version = "0.1.0"

[lib]
name = "connection_gateway"
path = "src/lib.rs"

[[bin]]
name = "connection_gateway_service"
path = "src/main.rs"

[[bin]]
name = "stale_connections"
path = "scripts/stale_connections.rs"

[[bin]]
name = "connection_gateway_openapi"
path = "src/openapi.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true, features = ["macros", "tower-log", "ws"] }
chrono = { workspace = true }
connection_gateway_client = { path = "../connection_gateway_client" }
connection_gateway_models = { path = "../connection_gateway_models" }
cowlike = { path = "../cowlike" }
dashmap = { workspace = true }
ensure_exists = { path = "../ensure_exists", features = ["dynamodb"] }
frecency = { path = "../frecency", features = [
  "inbound",
  "outbound",
  "postgres",
] }
futures = { workspace = true }
http-body-util = { workspace = true }
itertools = { workspace = true }
last_online_tracker = { path = "../last_online_tracker" }
macro_auth = { path = "../macro_auth" }
macro_user_id = { path = "../macro_user_id" }
macro_aws_config = { path = "../macro_aws_config" }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env = { path = "../macro_env" }
macro_env_var = { path = "../macro_env_var" }
macro_middleware = { path = "../macro_middleware", features = ["auth"] }
mockall.workspace = true
model = { path = "../model" }
model-entity = { path = "../model-entity" }
models_bulk_upload = { path = "../models_bulk_upload" }
redis = { workspace = true, features = [
  "aio",
  "tokio-comp",
  "tokio-rustls-comp",
] }
secretsmanager_client = { path = "../secretsmanager_client" }
serde = { workspace = true }
serde_dynamo = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
stream = { path = "../stream" }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tungstenite = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true }

[dev-dependencies]
cool_asserts = "2"
